browser/css/notebookbar.css
/* ... */
.notebookbar-tabs-container {
	display: inline-flex;
	flex: 0.1 0.1 auto;
	margin-inline-start: 5px;
}

.ui-tabs.notebookbar {
	display: inline-flex;
	z-index: 999;
	padding: 0px;
	height: 100%;
}

.notebookbar#NotebookBar {
	height: 82px;
}

button.ui-tab.notebookbar {
	box-sizing: border-box;
	height: 24px;
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 0 clamp(4px, 1vw, 1em);
	border: 1px solid transparent;
	background-color: transparent;
	/* calc([minimum size]
	   + ([maximum size] - [minimum size])
	   * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
	font-size: calc(
		var(--tb-min-fs) + (var(--tb-max-fs-u) - var(--tb-min-fs-u)) *
			((100vw - 640px) / (1000 - 640))
	);
	/* a minimum value, a preferred value or scaler, and a maximum allowed value. */
	font-size: clamp(var(--tb-min-fs), var(--tb-fs-s), var(--tb-max-fs));
	font-family: var(--lool-font);
	line-height: normal;
	color: var(--color-main-text);
}

#shareas {
	& .unolabel {
		color: var(--color-main-text);
	}
}

.ui-tab.notebookbar[style*='block'] {
	display: inline-flex !important;
}

.ui-tab.hidden.notebookbar {
	display: none !important;
}

.ui-tab.selected.notebookbar {
	border: 1px solid transparent !important;
	color: var(--color-text-darker) !important;
	box-shadow:
		inset 12px 0 var(--color-main-background),
		inset -12px 0 var(--color-main-background),
		inset 0 -2px rgb(var(--doc-type));
	transition: box-shadow 0.1s ease-out;
}

.ui-tab.selected.notebookbar:hover {
	box-shadow:
		inset 0 0 var(--color-main-background),
		inset 0 0 var(--color-main-background),
		inset 0 -2px rgb(var(--doc-type));
	transition: box-shadow 0.3s ease;
}

.ui-tab.notebookbar:hover {
	cursor: pointer !important;
	color: var(--color-text-darker) !important;
	box-shadow:
		inset 12px 0 var(--color-main-background),
		inset -12px 0 var(--color-main-background),
		inset 0 -2px var(--color-border);
}

/* Document Logo */
.main-nav.hasnotebookbar #document-header {
	height: 100%;
	background: transparent;
	align-items: center;
	display: flex;
}

/* grid */
.notebookbar.ui-grid {
	border-spacing: 0px;
}

/* shortcuts bar */

.notebookbar-shortcuts-bar {
	display: inline-block;
	position: relative;
	z-index: 1000;
	box-sizing: border-box;
}

.notebookbar-shortcuts-bar > table {
	display: block;
	height: 31px;
}

.notebookbar-shortcuts-bar .unotoolbutton.notebookbar .unobutton {
	width: var(--btn-size-m);
	height: var(--btn-size-m);
	padding: var(--btn-padding);
	justify-content: center;
	align-items: center;
}

.notebookbar-shortcuts-bar .unotoolbutton.notebookbar .unobutton img {
	width: 16px;
	height: 16px;
	margin: 0;
}

.unoSave.savemodified .unobutton img,
.savemodified.unotoolbutton .unobutton img,
#save.saving img,
#save.saved img {
	box-sizing: border-box;
	padding-left: var(--btn-img-size) !important;
}

html:not([data-theme='dark']) .unoSave.savemodified .unobutton img,
html:not([data-theme='dark']) .savemodified.unotoolbutton .unobutton img {
	background: url('images/lc_savemodified.svg') no-repeat center;
}

html[data-theme='dark'] .unoSave.savemodified .unobutton img,
html[data-theme='dark'] .savemodified.unotoolbutton .unobutton img {
	background: url('images/dark/lc_savemodified.svg') no-repeat center;
}

.notebookbar-shortcuts-bar .notebookbar.unotoolbutton {
	margin: 0px !important;
}

.notebookbar-shortcuts-bar .cell.notebookbar {
	padding: 0 2px;
}

.hasnotebookbar .notebookbar-shortcuts-bar #Menubar,
.hasnotebookbar .notebookbar-shortcuts-bar #Menubar li,
.hasnotebookbar .notebookbar-shortcuts-bar #Menubar > li > a {
	background-color: transparent;
	margin: 0px !important;
}

.hasnotebookbar .notebookbar-shortcuts-bar #Menubar > li > a {
	cursor: pointer;
	border: none;
	padding: 4px;
}

.hasnotebookbar #shortcuts-menubar-icon {
	position: absolute;
	top: 45%;
	left: 6px;
	height: 2px;
	width: 16px;
	-webkit-transition: all 0.25s;
	transition: all 0.25s;
}

#Open_Local_Editor img {
	opacity: 0.8;
}
[data-theme='dark'] #Open_Local_Editor img {
	filter: invert(1);
}

/* options section */
.notebookbar-options-section .cell.notebookbar {
	padding: 0;
}

/* root container */

.root-container.notebookbar {
	display: table-cell;
	vertical-align: middle;
}

#toolbar-wrapper.hasnotebookbar {
	background: var(--color-background-lighter);
	position: relative;
	z-index: 11;
}

.notebookbar.horizontal.ui-overflow-manager {
	padding-inline-start: 5px;
}

.hasnotebookbar > #toolbar-row {
	height: 82px;
}

.vertical.notebookbar {
	width: max-content;
	display: grid;
	grid-auto-flow: row;
	grid-gap: 4px;
}

.notebookbar.ui-separator.vertical {
	width: 1px;
	background-color: var(--color-toolbar-border);
	height: var(--notebookbar-element-height);
	margin: 0 2px;
	box-sizing: border-box;
}

.horizontal.notebookbar {
	display: grid;
	grid-auto-flow: column;
	grid-gap: 4px;
	align-items: center;
	justify-items: center;
	width: max-content;
	color: var(--color-main-text);
}

.horizontal.notebookbar:has(.unoBezier_Unfilled) {
	height: 100%;
	align-items: start;
}

/* unobuttons */

/* avoid bug with arrow in new line when window is small */
#table-Home-Section-Insert #table-LineB9 #InsertGraphic.notebookbar,
#table-Home-Section-Insert #table-GroupB20 #InsertTable.notebookbar {
	width: 50px;
}
#table-Home-Section-Insert #table-LineB9 #InsertGraphic.notebookbar {
	width: auto;
	margin-left: -2px;
}
#buttonbefore.notebookbar,
#buttonafter.notebookbar,
#buttonoptimal.notebookbar,
#buttonparallel.notebookbar,
#buttonnone.notebookbar,
#buttonthrough.notebookbar,
#bottom.notebookbar,
#top.notebookbar,
#standard.notebookbar,
#Bold.notebookbar,
#Italic.notebookbar,
#Underline.notebookbar,
#Strikeout.notebookbar {
	margin: 0px !important;
	padding: 0px !important;
}
/* ... */

